# tabpfn-time-series

./: .gitignore  .pre-commit-config.yaml  README.md  demo.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
gift_eval/: README.md  aggregate_result.py  data.py  dataset_definition.py  evaluate.py  requirements-gift-eval.txt  setup.sh  tabpfn_ts_wrapper.py
gift_eval/submission/: all_results.csv
src/: defaults.py  plot.py  predictor.py  tabpfn_worker.py
tabpfn_time_series/: __init__.py  data_preparation.py  defaults.py  feature.py  predictor.py  tabpfn_worker.py
